# workstack

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  manage.py
backend/apps/hris/: apps.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/incidents/: chunking.py  events.py  mcp_client.py  parser.py  tasks.py  urls.py  views.py
backend/apps/organizations/: admin.py  apps.py  mixin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/rbac/: admin.py  apps.py  constants.py  models.py  serializers.py  service.py  services.py  urls.py  views.py
backend/apps/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/core/: .settings.py.swp  asgi.py  celery.py  models.py  permissions.py  urls.py  wsgi.py
backend/core/settings/: base.py  ci.py  local.py  production.py
backend/core/tests/: helpers.py
backend/core/utils/: auth.py
backend/mcp_daemons/: hr_server.py  triage_server.py
backend/requirements/: base.txt  local.txt  production.txt
backend/scripts/: entrypoint.sh
docs/: AGENT_ARCHITECTURE.md  CELERY_GEVENT.md  INCIDENT_TRIAGE_AGENT.md  INCIDENT_TRIAGE_LOCAL_TEST.md  INCIDENT_TRIAGE_QA.md  INCIDENT_TRIAGE_RESEARCH.md  LANGCHAIN_MCP_INTEGRATION.md  LANGGRAPH_DEEP_DIVE.md  MCP_DEEP_DIVE.md  MCP_INTEGRATION.md  MCP_PROTOCOL_GAPS_AND_CONTRIBUTIONS.md  MCP_SSE_HTTP.md  TRIAGE_PRODUCT.md  WSGI_GEVENT_VS_ASGI.md
nginx/: default.conf
(+21 files in other folders)
